Bug 1625967 - Add a minimum width for the login-item container and add media queries that will reduce the login-list width and the padding of the login-item when the browser is narrower to fit more content on small screens. r=sfoster
Differential Revision: https://phabricator.services.mozilla.com/D68886

UltraBlame original commit: 19ca295a5c798bc5f2acb2888d3a4a60a3e57502

--- a/browser/components/aboutlogins/content/aboutLogins.css
+++ b/browser/components/aboutlogins/content/aboutLogins.css
@@ -62,6 +62,27 @@ login
 "
 ;
 }
+media
+(
+max
+-
+width
+:
+830px
+)
+{
+body
+{
+-
+-
+sidebar
+-
+width
+:
+270px
+;
+}
+}
 header
 {
 display
