--- a/browser/components/aboutlogins/content/components/fxaccounts-button.css
+++ b/browser/components/aboutlogins/content/components/fxaccounts-button.css
@@ -104,6 +104,32 @@ size
 13px
 ;
 }
+media
+(
+max
+-
+width
+:
+830px
+)
+{
+.
+fxaccounts
+-
+extra
+-
+text
+.
+fxaccount
+-
+email
+{
+display
+:
+none
+;
+}
+}
 .
 fxaccount
 -
