--- a/browser/components/aboutlogins/content/components/login-item.css
+++ b/browser/components/aboutlogins/content/components/login-item.css
@@ -162,6 +162,32 @@ height
 100
 %
 ;
+min
+-
+width
+:
+520px
+;
+}
+media
+(
+max
+-
+width
+:
+830px
+)
+{
+.
+container
+{
+padding
+-
+inline
+:
+20px
+;
+}
 }
 .
 column
